fixed letter spacing and changed background overla

--- a/scss/_photo-grid.scss
+++ b/scss/_photo-grid.scss
@@ -69,7 +69,7 @@
 		}
 
 		.image__overlay--primary {
-			background: #009578;
+			background: $pink;
 		}
 
 		.image__overlay > * {
@@ -88,7 +88,7 @@
 		.image__title {
 			font-size: 1.5em;
 			font-family: 'Brown-Bold', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-			letter-spacing: 1px;
+			letter-spacing: 3px;
 		}
 
 		.image__description {
@@ -159,7 +159,7 @@
 		}
 
 		.image__overlay--primary {
-			background: #009578;
+			background: $pink;
 		}
 
 		.image__overlay > * {
@@ -178,7 +178,7 @@
 		.image__title {
 			font-size: 1.5em;
 			font-family: 'Brown-Bold', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-			letter-spacing: 2px;
+			letter-spacing: 3px;
 		}
 
 		.image__description {
